--- a/fmh-android/app/build.gradle
+++ b/fmh-android/app/build.gradle
@@ -100,5 +100,6 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.4.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation 'io.qameta.allure:allure-kotlin-android:2.4.0'
+    androidTestImplementation('com.adevinta.android:barista:4.2.0')
     testImplementation 'androidx.test.espresso:espresso-idling-resource:3.4.0'
 }
